--- a/Debug/makefile
+++ b/Debug/makefile
@@ -44,7 +44,7 @@ all: coverage
 coverage: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -o"coverage" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -g -o"coverage" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
